car available page design

--- a/car_type.html
+++ b/car_type.html
@@ -81,6 +81,7 @@
      </div>
    </div>
    <!--------------------------mobile Ui start-------------------->
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
@@ -116,7 +117,9 @@
          <b class="text-info text-center">Small Car</b>
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
-   </div><!--------------card close---------->   
+   </div><!--------------card close----------> 
+   </a>  
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
@@ -133,7 +136,7 @@
           </div>
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>2 large bag</label>
            </div>
             <div class="col">
               <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
@@ -153,6 +156,8 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
+   </a>
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
@@ -161,7 +166,7 @@
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>5 Seats</label>
            </div>
             <div class="col">
               <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
@@ -169,7 +174,7 @@
           </div>
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>2 large bag</label>
            </div>
             <div class="col">
               <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
@@ -189,6 +194,8 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
+   </a>
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
@@ -197,7 +204,7 @@
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>5 Seats</label>
            </div>
             <div class="col">
               <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
@@ -205,7 +212,7 @@
           </div>
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>2 large bag</label>
            </div>
             <div class="col">
               <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
@@ -225,6 +232,8 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
+   </a>
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
@@ -233,7 +242,7 @@
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>6 Seats</label>
            </div>
             <div class="col">
               <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
@@ -241,7 +250,7 @@
           </div>
           <div class="form-row">
            <div class="col">
-             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>3 large bag</label>
            </div>
             <div class="col">
               <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
@@ -261,12 +270,14 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
+   </a>
    <!--------------------------mobile Ui close-------------------->
 
    <!--------------------------Website Ui start-------------------->
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-4 p-0 d-flex align-items-center">
+       <div class="col-4 p-0 d-flex align-items-center justify-content-center">
          <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-6 p-0 px-1 py-1 text-justify">
@@ -300,9 +311,11 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
+   </a>
+   <a href="car_available.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-4 p-0 d-flex align-items-center">
+       <div class="col-4 p-0 d-flex align-items-center justify-content-center">
          <img src="assets/images/compact.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-6 p-0 px-1 py-1 text-justify">
@@ -336,6 +349,7 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
+   </a>
    <!--------------------------Website Ui close-------------------->
 </div>
 
