booking page creating

--- a/booking_confirmation.html
+++ b/booking_confirmation.html
@@ -69,14 +69,8 @@
   <br>
    <div class="card rounded-0 col-md-8 offset-md-2 f-ply mb-3 sd2">
      <div class="row m-0 px-2 py-2">
-       <div class="col-5 p-0">
-         <p class="mb-0">Pick-up</p>
-         <p class="mb-0 text-truncate text-lig"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
-       </div>
-       <div class="col-1 p-0 d-flex align-items-center"><img src="assets/images/right.png" style="height: 30px;width: 30px"></div>
-       <div class="col-6 p-0">
-         <p class="mb-0">Drop-off</p>
-         <p class="mb-0 text-truncate text-lig"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
+       <div class="col-12 p-0 text-center">
+         <p class="mb-0 text-truncate"><b>Booking Confirmation</b></p>
        </div>
      </div>
    </div>
@@ -86,81 +80,6 @@
        <div class="col-6 p-0 text-center car_book">
         <h5>Hyundai sonata</h5>
          <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
-       </div><!--------------col-4 close---------->
-       <div class="col-6 p-0 px-1 py-1 justify-content-center">
-          <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
-          <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
-       </div><!--------------col-6 close---------->
-     </div><!--------------row close---------->
-     <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-6 p-0  text-center">
-        <p class="mb-0 text-lig"><small>Price for 1 day</small></p>
-         <p class="mb-0"><b>SAR 100</b></p>
-       </div><!--------------col-4 close----------><!--------------col-6 close---------->
-       <div class="col-6  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Go To Book</button>
-       </div><!--------------col-2 close---------->
-     </div>
-   </div><!--------------card close---------->
-   </a>
-   <a href="booking_confirmation.html">
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="row m-0 px-2 py-2">
-       <div class="col-6 p-0 text-center car_book">
-        <h5>Hyundai Elantra </h5>
-         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
-       </div><!--------------col-4 close---------->
-       <div class="col-6 p-0 px-1 py-1 justify-content-center">
-          <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
-          <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
-       </div><!--------------col-6 close---------->
-     </div><!--------------row close---------->
-     <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-6 p-0  text-center">
-        <p class="mb-0 text-lig"><small>Price for 1 day</small></p>
-         <p class="mb-0"><b>SAR 100</b></p>
-       </div><!--------------col-4 close----------><!--------------col-6 close---------->
-       <div class="col-6  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Go To Book</button>
-       </div><!--------------col-2 close---------->
-     </div>
-   </div><!--------------card close---------->
-   </a>
-   <a href="booking_confirmation.html">
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="row m-0 px-2 py-2">
-       <div class="col-6 p-0 text-center car_book">
-        <h5>Chevrolet Malibu</h5>
-         <img src="assets/images/Malibu.jpg" class="" style="height: 93px;width: 140px">
-       </div><!--------------col-4 close---------->
-       <div class="col-6 p-0 px-1 py-1 justify-content-center">
-          <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
-          <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
-       </div><!--------------col-6 close---------->
-     </div><!--------------row close---------->
-     <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-6 p-0  text-center">
-        <p class="mb-0 text-lig"><small>Price for 1 day</small></p>
-         <p class="mb-0"><b>SAR 100</b></p>
-       </div><!--------------col-4 close----------><!--------------col-6 close---------->
-       <div class="col-6  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Go To Book</button>
-       </div><!--------------col-2 close---------->
-     </div>
-   </div><!--------------card close---------->
-   </a>
-   <a href="booking_confirmation.html">
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="row m-0 px-2 py-2">
-       <div class="col-6 p-0 text-center car_book">
-        <h5>Dodge Neon</h5>
-         <img src="assets/images/neon.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-6 p-0 px-1 py-1 justify-content-center">
           <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
