--- a/booking_confirmation.html
+++ b/booking_confirmation.html
@@ -70,12 +70,15 @@
    <div class="card rounded-0 col-md-8 offset-md-2 f-ply mb-3 sd2">
      <div class="row m-0 px-2 py-2">
        <div class="col-12 p-0 text-center">
-         <p class="mb-0 text-truncate"><b>Booking Confirmation</b></p>
+         <h5 class="mb-0 text-truncate"><b>Booking Confirmation</b></h5>
        </div>
      </div>
    </div>
    <a href="booking_confirmation.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
+     <div class="form-group m-0 px-2 py-2">
+      <h6 class="text-center"><b>Address:</b> Jeddah King Abdulaziz International Airport (to) Jeddah King Abdulaziz International Airport</h6>
+     </div>
      <div class="row m-0 px-2 py-2">
        <div class="col-6 p-0 text-center car_book">
         <h5>Hyundai sonata</h5>
@@ -89,12 +92,8 @@
        </div><!--------------col-6 close---------->
      </div><!--------------row close---------->
      <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-6 p-0  text-center">
-        <p class="mb-0 text-lig"><small>Price for 1 day</small></p>
-         <p class="mb-0"><b>SAR 100</b></p>
-       </div><!--------------col-4 close----------><!--------------col-6 close---------->
-       <div class="col-6  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Go To Book</button>
+       <div class="col-12  p-0 d-flex align-items-center px-1">
+         <button class="btn btn-success text-center px-1 w-100">Confirm</button>
        </div><!--------------col-2 close---------->
      </div>
    </div><!--------------card close---------->
