--- a/booking.html
+++ b/booking.html
@@ -135,7 +135,7 @@
      <div class="row m-0 px-2 py-2">
        <div class="col-6 p-0 text-center car_book">
         <h5>Chevrolet Malibu</h5>
-         <img src="assets/images/Malibu.jpg" class="" style="height: 93px;width: 140px">
+         <img src="assets/images/malibu.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-6 p-0 px-1 py-1 justify-content-center">
           <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
