--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@
           </div>
         </form>
     </div>
-    <div class="card col-lg-4 col-10 col-sm-6 f-ply bg-light px-5" id="myDIV2" style="display: none;">
+    <div class="card col-lg-4 col-10 col-sm-6 f-ply bg-light" id="myDIV2" style="display: none;">
       <h6 class="text-center text-success mb-0"></h6>
        <form action="saveuser.php" method="post" enctype="multipart/form-data">
-         <h4 class="text-center my-3 pb-3">Create Your Account</h4>
-         <div class="form-group">
+         <h4 class="text-center mb-3 mt-2 py-2 bg-white shadow-sm">Create Your Account</h4>
+         <div class="form-group px-4">
           <label>Name:</label>
-          <input type="text" class="form-control" name="name" required>
+          <input type="text" class="form-control rounded-0" name="name" required>
           </div>
-         <div class="form-group">
+         <div class="form-group px-4">
           <label>Mobile No:</label>
           <div class="input-group w-100">
-              <input id="phone2" type="tel" class="form-control in_putbox">
+              <input id="phone2" type="tel" class="form-control in_putbox rounded-0">
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group px-4">
           <label>Password:</label>
-          <input type="password" class="form-control" name="pass" required>
+          <input type="password" class="form-control rounded-0" name="pass" required>
           </div>
-          <div class="form-group">
+          <div class="form-group px-4">
           <label>Select Profile:</label>
-          <input type="file" class="form-control" name="imag" required>
+          <input type="file" class="form-control rounded-0" name="imag" required>
           </div>
-          <div class="form-group text-center py-2">
+          <div class="form-group text-center py-2 px-4">
             <button class="btn btn-info bg-blue w-100" onclick="window.location.href='home.html'" type="submit">Register</button>
           </div>
-          <div class="form-group text-center">
+          <div class="form-group text-center px-4">
             <a class="text-blue" href="#" onclick="myFun1()"><b>Already have An Account? Login</b></a>
           </div>
         </form>
