--- a/my_trip.html
+++ b/my_trip.html
@@ -70,34 +70,70 @@
    <div class="card rounded-0 col-md-8 offset-md-2 f-ply mb-3 sd2">
      <div class="row m-0 px-2 py-2">
        <div class="col-12 p-0 text-center">
-         <h5 class="mb-0 text-truncate"><b>Booking Confirmation</b></h5>
+         <h5 class="mb-0 text-truncate"><b>My Trips</b></h5>
        </div>
      </div>
    </div>
-   <a href="my_trip.html">
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="form-group m-0 px-2 py-2">
-      <h6 class="text-center"><b>Address :-</b><br>Jeddah King Abdulaziz International Airport (to) Jeddah King Abdulaziz International Airport</h6>
-     </div>
-     <div class="row m-0 px-2 py-2">
-       <div class="col-6 p-0 text-center car_book">
-        <h5>Hyundai sonata</h5>
-         <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
-       </div><!--------------col-4 close---------->
-       <div class="col-6 p-0 px-1 py-1 justify-content-center">
-          <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
-          <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
-       </div><!--------------col-6 close---------->
-     </div><!--------------row close---------->
-     <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-12  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Confirm</button>
-       </div><!--------------col-2 close---------->
-     </div>
-   </div><!--------------card close---------->
-   </a>
+    <div class="card col-lg-8 offset-lg-2 p-0 mt-3 rounded-0 sd">
+      <div class="card-body py-2">
+        <div class="row">
+          <div class="col-6 p-0 px-2 d-flex align-items-center"><h5 class="mb-0 text-blue text-truncate"><b>Jeddah King Abdulaziz International Airport</b></h5></div>
+          <div class="col-6 p-0 px-2"><p class="text-right mb-0"><small><b>02/09/2019<br>12:45</b></small></p></div>
+        </div>
+        <hr class="w-100 my-1 my-sd">
+        <div class="row f-cga">
+          <div class="col-6 p-0 px-3">
+            <div class="form-group mb-0">
+              <i class="fas fa-user"></i> <span class="text-secondary"> Kumar</span>
+            </div>
+            <div class="form-group mb-0">
+              <i class="fas fa-phone"></i> <span class="text-secondary"> 7654345474</span>
+            </div>
+            <div class="form-group mb-0">
+              <img src="assets/images/air.png" style="height: 15px;width: 15px"> <span class="text-secondary"> Ac </span>
+            </div>
+          </div>
+          <div class="col-6 car_book">
+            <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+            <span>Hyundai Elantra</span>
+          </div>
+        </div>
+        <div class="form-group mb-0 text-center mt-2">
+          <button class="btn btn-default bg-success text-white w-75" disabled/><b>Completed</b></button>
+        </div>
+      </div>
+    </div>
+    <div class="card col-lg-8 offset-lg-2 p-0 mt-3 rounded-0 sd">
+      <div class="card-body py-2">
+        <div class="row">
+          <div class="col-6 d-flex align-items-center"><h5 class="mb-0 text-blue"><b>Riyadh</b></h5></div>
+          <div class="col-6"><p class="text-right mb-0"><small><b>09/10/2019<br>12:45</b></small></p></div>
+        </div>
+        <hr class="w-100 my-1 my-sd">
+        <div class="row f-cga">
+          <div class="col-6 p-0 px-3">
+            <div class="form-group mb-0">
+              <i class="fas fa-user"></i> <span class="text-secondary"> Kumar</span>
+            </div>
+            <div class="form-group mb-0">
+              <i class="fas fa-phone"></i> <span class="text-secondary"> 7654345474</span>
+            </div>
+            <div class="form-group mb-0">
+              <img src="assets/images/air.png" style="height: 15px;width: 15px"> <span class="text-secondary"> Ac </span>
+            </div>
+          </div>
+          <div class="col-6 car_book">
+            <img src="assets/images/malibu.jpg" class="" style="height: 93px;width: 140px">
+            <span>Chevrolet Malibu</span>
+          </div>
+        </div>
+        <div class="form-group mb-0 text-center mt-2">
+          <button class="btn btn-default bg-info text-white w-75">
+            <span class="spinner-grow spinner-grow-sm"></span> <b>Upcoming</b>
+          </button>
+        </div>
+      </div>
+    </div>
 </div>
 
 <script>
