--- a/my_profile.html
+++ b/my_profile.html
@@ -32,13 +32,13 @@
       <!-------- Account Menus open--------->
       <ul class="nav nav-tabs flex-column text-dark side-mu">
           <li class="nav-item">
-             <a class="nav-link py-3" href="home.html"><img src="assets/images/profile.png" style="width:25px;height:25px">&nbsp;&nbsp; Profile</a>
+             <a class="nav-link py-3" href="my_profile.html"><img src="assets/images/profile.png" style="width:25px;height:25px">&nbsp;&nbsp; Profile</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link py-3" href="my-account.html"><img src="assets/images/trip.png" style="width:25px;height:25px">&nbsp;&nbsp; My Trip</a>
+             <a class="nav-link py-3" href="my-trip.html"><img src="assets/images/trip.png" style="width:25px;height:25px">&nbsp;&nbsp; My Trip</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link py-3" href="book_table.html"><img src="assets/images/support.png" style="width:25px;height:25px">&nbsp;&nbsp; Help & Support</a>
+             <a class="nav-link py-3" href="support.html"><img src="assets/images/support.png" style="width:25px;height:25px">&nbsp;&nbsp; Help & Support</a>
           </li>
           <!-- <li class="nav-item">
              <a class="nav-link py-3" href="contact.html"><img src="assets/images/ic_contactus.png" style="width:30px;height:30px">&nbsp;&nbsp; Contact Us</a>
@@ -56,7 +56,7 @@
        <a class="navbar-brand" href="#" data-toggle="collapse" data-target="#collapsibleNavbar" onclick="openNav()">
        <i class="fas fa-sliders-h text-light p-1 border border-light"></i></a>
    </div>
-    <div class="col-4 text-right"><a class="ml-auto" href="#"><img class="" src="assets/images/logo_2.png" style="width:150px;height: 38px"></a>
+    <div class="col-4 text-right"><a class="ml-auto" href="home.html"><img class="" src="assets/images/logo_2.png" style="width:150px;height: 38px"></a>
     </div> 
     <div class="col">
       <p class="mb-0 text-center py-1 px-2"><span></span></p>
