--- a/support.html
+++ b/support.html
@@ -67,110 +67,14 @@
   <br>
   <br>
   <br>
-   <div class="card col-lg-8 offset-lg-2 p-0">
-      <!-- Nav pills -->
-      <ul class="nav nav-pills my_act">
-        <li class="nav-item col-4 p-0 text-center">
-          <a class="nav-link active rounded-0 px-1" data-toggle="pill" href="#details"><b>My Details</b></a>
-        </li>
-        <li class="nav-item col-4 p-0 text-center">
-          <a class="nav-link rounded-0 px-1" data-toggle="pill" href="#password"><b>Password</b></a>
-        </li>
-        <li class="nav-item col-4 p-0 text-center">
-          <a class="nav-link rounded-0 px-1" data-toggle="pill" href="#orders"><b>My Trips</b></a>
-        </li>
-      </ul>
-    </div>
 
     <div class="card col-lg-8 offset-lg-2 p-0 mt-3 my-sd bg-white">
-      <div class="card-body px-2">
-        <div class="tab-content">
-          <div class="tab-pane container active" id="details">
-            <form action="#" method="post">
-             <div class="card rounded-0">
-              <div class="card-header bg-light"><b>Profile Information</b></div>
-              <div class="card-body">
-                <div class="form-row">
-                  <div class="form-group col-12 col-sm-4 text-secondary">
-                   <label for="name"><b>Name :</b></label>
-                   <input type="text" class="form-control text-secondary" value="kumar">
-                 </div>
-                  <div class="form-group col-12 col-sm-4 text-secondary">
-                   <label for="phone"><b>Phone:</b></label>
-                   <input type="number" class="form-control text-secondary" value="1234567890">
-                 </div>
-                  <div class="form-group col-12 col-sm-4 text-secondary">
-                   <label for="email"><b>Profile Image:</b></label>
-                   <input type="file"  class="form-control text-secondary" value="pro.png">
-                 </div>
-               </div>
-              </div>
-            </div>
-          </form>
-          </div>
-          <div class="tab-pane container fade" id="password">
-            <form action="#" method="post">
-             <div class="card rounded-0">
-              <div class="card-header bg-light"><b>Change Your Password</b></div>
-              <div class="card-body">
-                <div class="form-row">
-                  <div class="form-group col-12 text-secondary">
-                   <label for="curpass"><b>Current Password:</b></label>
-                   <input type="password" class="form-control text-secondary">
-                 </div>
-                  <div class="form-group col-12 col-sm-6 text-secondary">
-                   <label for="newpass"><b>New Password:</b></label>
-                   <input type="password"  class="form-control text-secondary">
-                 </div>
-                  <div class="form-group col-12 col-sm-6 text-secondary">
-                   <label for="conpass"><b>Confirm Password:</b></label>
-                   <input type="password" class="form-control text-secondary">
-                 </div>
-               </div>
-               <div class="form-group text-center my-1">
-                  <button class="btn btn-success w-75"><b>Update</b></button>
-                 </div>
-              </div>
-            </div>
-          </form>
-          </div>
-          <div class="tab-pane container fade" id="orders">
-            <div class="table-responsive">
-            <table class="table table-sm myord_tbl text-secondary text-center">
-              <thead class="bg-light">
-                <tr>
-                  <th>Order</th>
-                  <th>Date</th>
-                  <th>Status</th>
-                  <th>Detail</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>122</td>
-                  <td>02/09/2019</td>
-                  <td>Completed</td>
-                  <td><a href="my-booking.html"><span class="btn badge badge-success p-2">View</span></a></td>
-                </tr>
-                <tr>
-                  <td>123</td>
-                  <td>28/09/2019</td>
-                  <td>Upcomming</td>
-                  <td><a href="my-booking.html"><span class="btn badge badge-success p-2">View</span></a></td>
-                </tr>
-                <tr>
-                  <td>126</td>
-                  <td>02/09/2019</td>
-                  <td>Completed</td>
-                  <td><a href="my-booking.html"><span class="btn badge badge-success p-2">View</span></a></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          </div>
-        </div>
-
-      </div>
+     <div class="row m-0 px-2 py-2">
+       <div class="col-12 p-0 text-center">
+         <h5 class="mb-0 text-truncate"><b>Help & Support</b></h5>
+         <img src="assets/images/support.gif" class="img-fluid">
+       </div>
+     </div>
     </div>
   <br>
 </div>
