--- a/booking_confirmation.html
+++ b/booking_confirmation.html
@@ -74,7 +74,7 @@
        </div>
      </div>
    </div>
-   <a href="my_trip.html">
+   <a href="my-trip.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
      <div class="form-group m-0 px-2 py-2">
       <h6 class="text-center"><b>Address :-</b><br>Jeddah King Abdulaziz International Airport (to) Jeddah King Abdulaziz International Airport</h6>
