--- a/support.html
+++ b/support.html
@@ -67,14 +67,33 @@
   <br>
   <br>
   <br>
-
-    <div class="card col-lg-8 offset-lg-2 p-0 mt-3 my-sd bg-white">
-     <div class="row m-0 px-2 py-2">
-       <div class="col-12 p-0 text-center">
-         <h5 class="mb-0 text-truncate"><b>Help & Support</b></h5>
-         <img src="assets/images/support.gif" class="img-fluid">
+   <div class="card col-lg-6 offset-lg-3 px-4 py-3 mt-1 my-sd f-ply bg-img_support">
+      <form action="" method="post">
+       <h4 class=""><b>Help & Support</b></h4>
+       <h6>Please complete the form below for your complaints.</h6>
+       <hr class="my-2">
+       <div class="col-10 mx-auto">
+         <div class="form-group">
+           <label>Name:</label>
+           <input type="text"  class="form-control" placeholder="" required>
+         </div>
+         <div class="form-group">
+           <label>E-mail:</label>
+           <input type="email"  class="form-control" placeholder="" required>
+         </div>
+         <div class="form-group">
+           <label>The complaint is regarding:</label>
+           <input type="text"  class="form-control" placeholder="" required>
+         </div>
+         <div class="form-group">
+           <label>The nature of complaint:</label>
+           <textarea type="text" name="complaint" class="form-control" required></textarea> 
+         </div>
+         <div class="form-group">
+           <button class="btn btn-info">Submit</button>
+         </div>         
        </div>
-     </div>
+       </form>
     </div>
   <br>
 </div>
