--- a/my_profile.html
+++ b/my_profile.html
@@ -150,19 +150,19 @@
                   <td>122</td>
                   <td>02/09/2019</td>
                   <td>Completed</td>
-                  <td><a href="my-booking.html"><span class="btn badge badge-success p-2">View</span></a></td>
+                  <td><a href="my-trip.html"><span class="btn badge badge-success p-2">View</span></a></td>
                 </tr>
                 <tr>
                   <td>123</td>
                   <td>28/09/2019</td>
                   <td>Upcomming</td>
-                  <td><a href="my-booking.html"><span class="btn badge badge-success p-2">View</span></a></td>
+                  <td><a href="my-trip.html"><span class="btn badge badge-success p-2">View</span></a></td>
                 </tr>
                 <tr>
                   <td>126</td>
                   <td>02/09/2019</td>
                   <td>Completed</td>
-                  <td><a href="my-booking.html"><span class="btn badge badge-success p-2">View</span></a></td>
+                  <td><a href="my-trip.html"><span class="btn badge badge-success p-2">View</span></a></td>
                 </tr>
               </tbody>
             </table>
