--- a/home.html
+++ b/home.html
@@ -69,16 +69,16 @@
          <h4 class="text-center my-3 pb-1">Let's find your ideal Car</h4>
          <div class="form-row">
            <div class="form-group col">
-              <input type="text" class="form-control" name="country" placeholder="Country" required>
+              <input type="text" class="form-control" name="location" onclick="window.location.href='location.html'" placeholder="Location" required>
             </div>
-            <div class="form-group col">
+            <!-- <div class="form-group col">
               <input type="text" class="form-control" name="city" placeholder="City" required>
-            </div>
+            </div> -->
           </div>
           <div class="form-row">
-           <div class="form-group col">
+           <!-- <div class="form-group col">
               <input type="text" class="form-control" name="location" placeholder="Location" required>
-            </div>
+            </div> -->
             <div class="form-group col">
               <select class="form-control" required>
                 <option value="">Choose a type</option>     
