car type page changes

--- a/car_type.html
+++ b/car_type.html
@@ -112,6 +112,11 @@
               <img src="assets/images/gears.png" style="height: 15px;width: 15px"> <label>Automatic</label>
             </div>
           </div>
+          <div class="form-row">
+            <div class="col">
+              <img src="assets/images/mileage.png" style="height: 15px;width: 15px"><label>Mileage: 750 KM per rental</label>
+            </div>
+          </div>
        </div><!--------------col-6 close---------->
        <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
          <b class="text-info text-center">Small Car</b>
