--- a/car_type.html
+++ b/car_type.html
@@ -85,7 +85,14 @@
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
-         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+         <div class="form-row">
+            <div class="col">
+              <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+            </div>
+            <div class="col text-center">
+              <label>Company Name: <span class="text-success">Avis</span></label>
+            </div>
+          </div>
        </div><!--------------col-4 close---------->
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
           <div class="form-row">
