--- a/car_type.html
+++ b/car_type.html
@@ -291,7 +291,14 @@
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-4 p-0 d-flex align-items-center justify-content-center">
-         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+         <div class="form-row">
+            <div class="col">
+              <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+            </div>
+            <div class="col text-center">
+              <label>Company Name: <span class="text-success">Avis</span></label>
+            </div>
+          </div>
        </div><!--------------col-4 close---------->
        <div class="col-6 p-0 px-1 py-1 text-justify">
           <div class="form-row">
@@ -316,6 +323,11 @@
            </div>
             <div class="col">
               <img src="assets/images/gears.png" style="height: 20px;width: 20px"> <label>Automatic</label>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col">
+              <img src="assets/images/mileage.png" style="height: 15px;width: 15px"> <label>Mileage: 750 KM per rental</label>
             </div>
           </div>
        </div><!--------------col-6 close---------->
