--- a/booking.html
+++ b/booking.html
@@ -84,14 +84,22 @@
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
      <div class="row m-0 px-2 py-2">
        <div class="col-6 p-0 text-center car_book">
-        <h5>Hyundai sonata</h5>
-         <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
+         <div class="form-row">
+            <div class="col-12">
+              <h5>Hyundai sonata</h5>
+              <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
+            </div>
+            <div class="col-12 text-center">
+              <p class="mb-0">Company Name: <span class="text-danger">Avis</span></p>
+            </div>
+          </div>
        </div><!--------------col-4 close---------->
        <div class="col-6 p-0 px-1 py-1 justify-content-center">
           <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
           <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
           <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
           <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
+          <p class="mb-0 text-truncate">Branch Location: <span class="">Riyadh hgsiygiyug uhiuh uiy</span></p>
        </div><!--------------col-6 close---------->
      </div><!--------------row close---------->
      <div class="row m-0 px-2 py-2 border-top">
