--- a/booking.html
+++ b/booking.html
@@ -99,6 +99,7 @@
           <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
           <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
           <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
+          <p class="mb-0 text-lig"><i class="fas fa-tachometer-alt"></i> 750 KM</p>
           <p class="mb-0 text-truncate">Branch Location: <span class="">Riyadh hgsiygiyug uhiuh uiy</span></p>
        </div><!--------------col-6 close---------->
      </div><!--------------row close---------->
