--- a/booking_details.html
+++ b/booking_details.html
@@ -70,7 +70,7 @@
    <div class="card rounded-0 col-md-8 offset-md-2 f-ply mb-3 sd2">
      <div class="row m-0 px-2 py-2">
        <div class="col-12 p-0 text-center">
-         <h5 class="mb-0 text-truncate"><b>My Trips</b></h5>
+         <h5 class="mb-0 text-truncate"><b>Booking Details</b></h5>
        </div>
      </div>
    </div>
@@ -98,7 +98,6 @@
      </div>
    </div><!--------------card close---------->
    </a>
-  <br>
 </div>
 
 <script>
