--- a/my-trip.html
+++ b/my-trip.html
@@ -77,7 +77,7 @@
    <a href="my-trip.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
      <div class="form-group m-0 px-2 py-2">
-      <h6 class="text-center"><b>Booking ID :-</b>E23456789</h6>
+      <h6 class="text-center text-lig"><b>Booking ID :-</b>E23456789</h6>
      </div>
      <div class="row m-0 px-2 py-2">
        <div class="col-6 p-0 text-center car_book">
