start time and date create

--- a/my-trip.html
+++ b/my-trip.html
@@ -76,24 +76,48 @@
    </div>
    <a href="my-trip.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="form-group m-0 px-2 py-2">
+     <div class="form-group m-0 px-2 py-2 border-bottom">
       <h6 class="text-center text-lig"><b>Booking ID :-</b>E23456789</h6>
      </div>
      <div class="row m-0 px-2 py-2">
-       <div class="col-6 p-0 text-center car_book">
-        <h5>Hyundai sonata</h5>
-         <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
+       <div class="col-5 p-0 text-center car_book">
+         <img src="assets/images/standard.jpg" class="" style="height: 83px;width: 125px">
+         <h5 class="mb-0">Hyundai sonata</h5>
        </div><!--------------col-4 close---------->
-       <div class="col-6 p-0 px-1 py-1 justify-content-center">
-          <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
-          <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
+       <div class="col-7 p-0 px-1 py-1">
+           <!-- <p class="mb-0 text-lig float-left">Start</p>
+           <p class="mb-0 text-lig float-right">End</p>
+           <br>
+           <p class="mb-0 text-lig float-left">26/08/2019</p>
+           <p class="mb-0 text-lig float-right">28/08/2019</p>
+           <br>
+           <p class="mb-0 text-lig float-left">Start</p>
+           <p class="mb-0 text-lig float-rigffht">End</p>
+           <br> -->
+           <table class="table table-borderless text-center text-lig mb-0">
+             <tbody>
+               <tr>
+                 <th class="text-left">Start</th>
+                 <th class="text-right">End</th>
+               </tr>
+               <tr>
+                 <td class="text-left">2019/08/26</td>
+                 <td class="text-right">2019/08/28</td>
+               </tr>
+               <tr>
+                 <td class="text-left">12:05 pm</td>
+                 <td class="text-right">01:05 am</td>
+               </tr>
+             </tbody>
+           </table>
+           <div class="form-group text-lig mb-0">
+             <p class="mb-0 text-truncate"><i class="fas fa-map-marker-alt"></i> Riyadh, Saudi Arabia</p>
+           </div>
        </div><!--------------col-6 close---------->
      </div><!--------------row close---------->
      <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-12  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Confirm</button>
+       <div class="col-12  p-0 px-1 text-center">
+         <button class="btn btn-success px-1 w-50">Confirm</button>
        </div><!--------------col-2 close---------->
      </div>
    </div><!--------------card close---------->
