--- a/my-trip.html
+++ b/my-trip.html
@@ -76,50 +76,49 @@
    </div>
    <a href="my-trip.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="form-group m-0 px-2 py-2 border-bottom">
-      <h6 class="text-center text-lig"><b>Booking ID :-</b>E23456789</h6>
+     <div class="form-group m-0 px-2 py-1 border-bottom">
+      <h6 class="text-center text-lig mb-0"><b>Booking ID :-</b>E23456789</h6>
      </div>
      <div class="row m-0 px-2 py-2">
        <div class="col-5 p-0 text-center car_book">
          <img src="assets/images/standard.jpg" class="" style="height: 83px;width: 125px">
-         <h5 class="mb-0">Hyundai sonata</h5>
+         <h5 class="mb-0 text-lig">Hyundai sonata</h5>
        </div><!--------------col-4 close---------->
        <div class="col-7 p-0 px-1 py-1">
-           <!-- <p class="mb-0 text-lig float-left">Start</p>
-           <p class="mb-0 text-lig float-right">End</p>
-           <br>
-           <p class="mb-0 text-lig float-left">26/08/2019</p>
-           <p class="mb-0 text-lig float-right">28/08/2019</p>
-           <br>
-           <p class="mb-0 text-lig float-left">Start</p>
-           <p class="mb-0 text-lig float-rigffht">End</p>
-           <br> -->
-           <table class="table table-borderless text-center text-lig mb-0">
+           <p class="mb-0 text-lig"><i class="fas fa-hourglass-start"></i> 26/08/2019, 12:45 PM</p>
+           <p class="mb-0 mx-1 p-1" style="border-left: 2px dotted black"></p>
+           <p class="mb-0 text-lig"><i class="fas fa-hourglass-end"></i> 28/08/2019, 06:30 AM</p>
+           <p class="mb-0 text-lig text-truncate">
+             <i class="fas fa-map-pin text-success"></i> Riyadh, Near hotel royal, Saudi Arabia
+           </p>
+           <p class="mb-0 mx-1 p-1" style="border-left: 2px dotted black"></p>
+           <p class="mb-0 text-lig text-truncate">
+             <i class="fas fa-map-pin text-danger"></i> Riyadh, Near hotel royal, Saudi Arabia
+           </p>
+           <!-- <table class="table table-borderless text-center text-lig mb-0">
              <tbody>
                <tr>
                  <th class="text-left">Start</th>
-                 <th class="text-right">End</th>
+                 <th class="text-left">-</th>
+                 <td class="text-right">2019/08/26</td>
                </tr>
                <tr>
-                 <td class="text-left">2019/08/26</td>
+                 <th class="text-left">End</th>
+                 <th class="text-left">-</th>
                  <td class="text-right">2019/08/28</td>
                </tr>
                <tr>
                  <td class="text-left">12:05 pm</td>
+                 <th class="text-left">-</th>
                  <td class="text-right">01:05 am</td>
                </tr>
              </tbody>
-           </table>
-           <div class="form-group text-lig mb-0">
+           </table> -->
+           <!-- <div class="form-group text-lig mb-0">
              <p class="mb-0 text-truncate"><i class="fas fa-map-marker-alt"></i> Riyadh, Saudi Arabia</p>
-           </div>
+           </div> -->
        </div><!--------------col-6 close---------->
      </div><!--------------row close---------->
-     <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-12  p-0 px-1 text-center">
-         <button class="btn btn-success px-1 w-50">Confirm</button>
-       </div><!--------------col-2 close---------->
-     </div>
    </div><!--------------card close---------->
    </a>
   <br>
