--- a/my-trip.html
+++ b/my-trip.html
@@ -114,7 +114,7 @@
                </tr>
              </tbody>
            </table>
-           <div class="form-group text-lig mb-0">
+           <div class="form-group text-lig mb-0 mt-1">
              <p class="mb-0 text-truncate"><i class="fas fa-map-marker-alt"></i> Riyadh, Saudi Arabia</p>
            </div>
        </div><!--------------col-6 close---------->
